# TDxCompanion

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/TDxCompanion/: CMakeLists.txt  TDxCompanion-dark.pxm  TDxCompanion-light.pxm  TDxCompanion-lmb.pxm  TDxCompanion-off.pxm  TDxCompanion-on.pxm  TDxCompanion-rmb.pxm  TDxCompanionActionClassesMacro.h  TDxCompanionActionExecutor.h  TDxCompanionActionExecutor.m  TDxCompanionActionProtocol.h  TDxCompanionClickAction.h  TDxCompanionClickAction.m  TDxCompanionColorPickerAction.h  TDxCompanionColorPickerAction.m  TDxCompanionConfig.h  TDxCompanionDoubleclickAction.h  TDxCompanionDoubleclickAction.m  TDxCompanionDragDownAction.h  TDxCompanionDragDownAction.m  TDxCompanionDragUpAction.h  TDxCompanionDragUpAction.m  TDxCompanionExecutionOptions.h  TDxCompanionKeyBaseAction.h  TDxCompanionKeyBaseAction.m  TDxCompanionKeyDownAction.h  TDxCompanionKeyDownAction.m  TDxCompanionKeyDownUpBaseAction.h  TDxCompanionKeyDownUpBaseAction.m  TDxCompanionKeyPressAction.h  TDxCompanionKeyPressAction.m  TDxCompanionKeyUpAction.h  TDxCompanionKeyUpAction.m  TDxCompanionKeycodeInformer.h  TDxCompanionKeycodeInformer.m  TDxCompanionMouseBaseAction.h  TDxCompanionMouseBaseAction.m  TDxCompanionMoveAction.h  TDxCompanionMoveAction.m  TDxCompanionOutputHandler.h  (+21 more)
src/: CMakeLists.txt
src/tdxCore/: CMakeLists.txt
