## Version: $Id$
##
######################################################################
##
### Commentary:
##
######################################################################
##
### Change Log:
##
######################################################################
##
### Code:

add_subdirectory(TDxCompanion)

######################################################################
### CMakeLists.txt ends here
